# cpp-ascii-art

./: .gitignore  CMakeLists.txt
src/: image_io.cpp  image_io.h  image_manipulation.cpp  image_manipulation.h  main.cpp  symbol_map.cpp  symbol_map.h
